fix minor design breaks in contact me section

--- a/src/Components/ContactMe/ContactMe.scss
+++ b/src/Components/ContactMe/ContactMe.scss
@@ -2,7 +2,7 @@
 
 .contact-me {
   width: 100%;
-  height: 100vh;
+  height: 115vh;
   margin-top: 50px;
   padding: 0 20px;
 
@@ -153,9 +153,6 @@
     &__blob {
       width: 50%;
       height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
     }
   }
 }
